# icn-covm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  FOLLOWUP_TESTS.md  Makefile  PR_CHANGES_SUMMARY.md  PR_DESCRIPTION.md  README.md  README_FEDERATION.md  README_STORAGE_DEMO.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  ROADMAP.md  TEST_FILES_SUMMARY.md  TypedValueMigrationChecklist.md  TypedValueMigrationPlan.md  demo_storage.rs  docker-compose.yml  error_handling_fixes.md  full_project_dump.txt  function_example.dsl  hello.dsl  make_all_output.txt  program.dsl  program.json  stdlib.md  stdlib_demo.dsl  test.dsl  test_program.dsl  update_bootstrap.sh  vm.rs
crates/icn-covm/: Cargo.toml
crates/icn-covm/docs/: typed_values_guide.md
crates/icn-covm/examples/: auth_context_demo.rs  minimal_storage.rs  simple_storage.rs  vm_basic_operations.rs
crates/icn-covm/src/: bytecode.rs  events.rs  identity.rs  lib.rs  main.rs  typed.rs  vm_legacy.rs
crates/icn-covm/src/cli/: governance.rs  governance_template.rs  mod.rs  proposal.rs  proposal_demo.rs  utils.rs
crates/icn-covm/src/compiler/: common.rs  function_block.rs  line_parser.rs  loop_block.rs  macros.rs  mod.rs  parse_dsl.rs  parser.rs  proposal_block.rs  while_block.rs
crates/icn-covm/src/federation/: README.md  behaviour.rs  error.rs  node.rs  storage.rs  tests.rs
crates/icn-covm/src/governance/: README.md  comments.rs  liquid_delegate.rs  mod.rs  proposal.rs  proposal_lifecycle.rs  quorum_threshold.rs  ranked_vote.rs  traits.rs  vote_threshold.rs
crates/icn-covm/src/governance/templates/: mod.rs  registry.rs
crates/icn-covm/src/identity/: member.rs  tests.rs
crates/icn-covm/src/storage/: README.md  errors.rs  events.rs  mod.rs  resource.rs  traits.rs  utils.rs  versioning.rs
crates/icn-covm/src/storage/implementations/: file_storage.rs  in_memory.rs  mod.rs
crates/icn-covm/src/typed/: README.md
crates/icn-covm/src/vm/: README.md  errors.rs  execution.rs  memory.rs  mod.rs  stack.rs  typed_trace.rs  types.rs  vm.rs
crates/icn-covm/src/vm/ops/: arithmetic.rs  governance.rs  identity.rs  mod.rs  storage.rs
crates/icn-covm/tests/: file_storage.rs  governance_dsl.rs  governance_ops.rs  integration.rs  proposal_lifecycle.rs  rbac_storage.rs  storage_auth_context.rs  storage_extensions.rs  typed_values.rs  vm_identity.rs
demo/: program.dsl  simple_program.dsl  test_conditional.dsl  test_function_basic.dsl  test_simple_if.dsl  test_storage.dsl
docs/: CCL_grammar.md  ICN-COVM-Strategic-Roadmap.md  architecture.md  bytecode.md  covm_vm_architecture.md  dsl_governance.md  dsl_macros.md  economic_operations.md  federation.md  federation_guide.md  federation_voting.md  governance.md  governance_templates.md  identity.md  (+14 more)
(+209 files in other folders)
