# workspace = { members = ["storage-demo"] }
[package]
name = "icn-covm"
version = "0.5.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
rustyline = "11.0"
colored = "2.1"
ed25519-dalek = "1.0"
base64 = "0.13"
rand = "0.7"

[features]
default = []
