# workspace = { members = ["storage-demo"] }
[package]
name = "icn-covm"
version = "0.5.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4.3"
once_cell = "1.19"
rustyline = "11.0"
colored = "2.1"

[features]
default = []
typed-values = []
