[package]
name = "icn-covm"
version = "0.5.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.12"
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4.3"
once_cell = "1.19"
rustyline = "11.0"
colored = "2.1"
libp2p = { version = "0.52", features = ["tcp", "noise", "yamux", "kad", "mdns", "ping", "tokio", "identify"] }
libp2p-swarm-derive = "0.33"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
log = "0.4.27"
void = "1.0.2"
env_logger = "0.10.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
ed25519-dalek = "2"
multibase = "0.9"
did-key = "^0.2"
uuid = { version = "1.4", features = ["v4"] }
warp = { version = "0.3.7", features = ["tls"] }
icn-ledger = { path = "../icn-ledger" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[features]
default = []
typed-values = [] 